# persian2tajik-transliteration

./: .dockerignore  .dvcignore  .gitignore  .pre-commit-config.yaml  Dockerfile.triton  README.md  commands.py  eval_ood.py  infer.py  models.dvc  pyproject.toml  train.py
.dvc/: config
configs/: config.yaml
configs/data/: parstext.yaml
configs/eval/: default.yaml
configs/model/: byt5.yaml  char_transformer.yaml  lstm.yaml  mt5.yaml
configs/train/: default.yaml
data/: processed.dvc
persian_tajik_translit/: __init__.py
persian_tajik_translit/data/: dataset.py  download.py
persian_tajik_translit/eval/: metrics.py
persian_tajik_translit/export/: onnx_export.py  trt_export.py
persian_tajik_translit/models/: byt5_module.py  char_transformer.py  lstm_module.py
persian_tajik_translit/training/: losses.py
triton_models/: test_client.py  test_results.html
triton_models/lstm_translit/: config.pbtxt
triton_models/lstm_translit/1/: model.py
