[project]
name = "persian-tajik-translit"
version = "0.1.0"
description = "Bidirectional Tajik↔Persian transliteration with ByT5-small"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.7",
    "pytorch-lightning>=2.4",
    "transformers>=4.44,<4.50",
    "optimum[onnxruntime]>=1.21,<2.0",
    "onnxruntime>=1.19,<2.0",
    "hydra-core>=1.3,<1.4",
    "omegaconf>=2.3",
    "mlflow>=2.17,<3.0",
    "dvc[gdrive]>=3.50,<4.0",
    "sacrebleu>=2.4,<3.0",
    "fire>=0.6,<1.0",
    "datasets>=2.20,<3.0",
    "pandas>=2.2,<3.0",
    "pyarrow>=18.0,<20.0",
    "editdistance>=0.8,<1.0",
    "sentencepiece>=0.2,<1.0",
    "accelerate>=0.33,<1.0",
    "gitpython>=3.1,<4.0",
    "tritonclient[http]>=2.49,<3.0",
    "onnxscript>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=3.7,<4.0",
    "ruff>=0.6,<1.0",
]
ezafe = [
    "dadmatools>=2.0,<3.0",
]
trt = [
    "tensorrt-cu12>=10.0,<11.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["persian_tajik_translit"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501", "N812"]

[tool.ruff.lint.isort]
known-first-party = ["persian_tajik_translit"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.uv.sources]
torch = { index = "pytorch-cu128" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
